--- a/jupyter_russian/topic01_pandas_data_analysis/[solution]_lesson1_practice_pandas_titanic.ipynb
+++ b/jupyter_russian/topic01_pandas_data_analysis/[solution]_lesson1_practice_pandas_titanic.ipynb
@@ -23,10 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -45,10 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv('../../data/titanic_train.csv',\n",
@@ -64,165 +60,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Survived</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Braund, Mr. Owen Harris</td>\n",
-       "      <td>male</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>A/5 21171</td>\n",
-       "      <td>7.25</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>PC 17599</td>\n",
-       "      <td>71.28</td>\n",
-       "      <td>C85</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Heikkinen, Miss. Laina</td>\n",
-       "      <td>female</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>STON/O2. 3101282</td>\n",
-       "      <td>7.92</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>113803</td>\n",
-       "      <td>53.10</td>\n",
-       "      <td>C123</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Allen, Mr. William Henry</td>\n",
-       "      <td>male</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>373450</td>\n",
-       "      <td>8.05</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Survived  Pclass  \\\n",
-       "PassengerId                     \n",
-       "1                   0       3   \n",
-       "2                   1       1   \n",
-       "3                   1       3   \n",
-       "4                   1       1   \n",
-       "5                   0       3   \n",
-       "\n",
-       "                                                          Name     Sex   Age  \\\n",
-       "PassengerId                                                                    \n",
-       "1                                      Braund, Mr. Owen Harris    male  22.0   \n",
-       "2            Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0   \n",
-       "3                                       Heikkinen, Miss. Laina  female  26.0   \n",
-       "4                 Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0   \n",
-       "5                                     Allen, Mr. William Henry    male  35.0   \n",
-       "\n",
-       "             SibSp  Parch            Ticket   Fare Cabin Embarked  \n",
-       "PassengerId                                                        \n",
-       "1                1      0         A/5 21171   7.25   NaN        S  \n",
-       "2                1      0          PC 17599  71.28   C85        C  \n",
-       "3                0      0  STON/O2. 3101282   7.92   NaN        S  \n",
-       "4                1      0            113803  53.10  C123        S  \n",
-       "5                0      0            373450   8.05   NaN        S  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 891 entries, 1 to 891\n",
+      "Data columns (total 11 columns):\n",
+      "Survived    891 non-null int64\n",
+      "Pclass      891 non-null int64\n",
+      "Name        891 non-null object\n",
+      "Sex         891 non-null object\n",
+      "Age         714 non-null float64\n",
+      "SibSp       891 non-null int64\n",
+      "Parch       891 non-null int64\n",
+      "Ticket      891 non-null object\n",
+      "Fare        891 non-null float64\n",
+      "Cabin       204 non-null object\n",
+      "Embarked    889 non-null object\n",
+      "dtypes: float64(2), int64(4), object(5)\n",
+      "memory usage: 83.5+ KB\n"
+     ]
     }
    ],
    "source": [
-    "data.head(5)"
+    "data.head(5)\n",
+    "\n",
+    "data.info()"
    ]
   },
   {
@@ -1390,7 +1257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   },
   "name": "seminar02_practice_pandas_titanic.ipynb"
  },
