--- a/jupyter_russian/homeworks/hw3_session3_optional_implement_dt.ipynb
+++ b/jupyter_russian/homeworks/hw3_session3_optional_implement_dt.ipynb
@@ -21,10 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -70,9 +68,13 @@
     "    'mad_median': Среднее отклонение от медианы $F(X) = \\dfrac{1}{|X|} \\sum_{x_j \\in X}|y_j - \\mathrm{med}(y)|$\n",
     "    \n",
     "- класс имеет методы `fit`, `predict` и `predict_proba`;\n",
+    "\n",
+    "- ---\n",
     "- метод `fit` принимает матрицу объектов `X` и вектор ответов `y` (объекты `numpy.ndarray`) и возвращает экземпляр класса\n",
     "    `DecisionTree`, представляющий собой решающее дерево, обученное по выборке `(X, y)` с учётом заданных в конструкторе параметров; \n",
+    "------\n",
     "- метод `predict_proba` принимает матрицу объектов `X` и возвращает матрицу `P` размера `X.shape[0] x K`, где `K` - число классов, такую что $p_{ij}$ есть вероятность принадлежности объекта, заданного $i$-ой строкой матрицы X к классу $j \\in \\{1, \\dots, K\\}$.\n",
+    "_______\n",
     "- метод `predict` принимает матрицу объектов и возвращает вектор предсказанных ответов; в случае классификации - это \n",
     "    наиболее многочисленный класс в листе, в который попал объект, а в случае регрессии - среднее значение ответов по \n",
     "    всем объектам этого листа;"
@@ -80,10 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 125,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def entropy(y):    \n",
@@ -93,34 +93,294 @@
     "    pass\n",
     "\n",
     "def variance(y):\n",
-    "    pass\n",
+    "    '''\n",
+    "    $F(X) = \\dfrac{1}{|X|} \\sum_{x_j \\in X}(y_j - \\dfrac{1}{|X|}\\sum_{x_i \\in X}y_i)^2$\n",
+    "    '''\n",
+    "    l = len(y)\n",
+    "    if l == 0:\n",
+    "        return 0\n",
+    "    mean = (1/l)*np.sum(y)\n",
+    "    s = 0\n",
+    "    for i in range(l):\n",
+    "        s += (y[i]-mean)**2\n",
+    "    return (1/l)*s\n",
     "\n",
     "def mad_median(y):\n",
-    "    pass"
+    "    l = len(y)\n",
+    "    med = np.median(y)\n",
+    "    s = 0\n",
+    "    for i in range(l):\n",
+    "        s += np.abs(y[i]-med)\n",
+    "    return (1/l)*s\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test\n",
+    "\n",
+    "X = np.linspace(-2, 2, 50)\n",
+    "y = X ** 3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class DecisionTree(BaseEstimator):\n",
+    "\n",
+    "    class Node:\n",
+    "        \n",
+    "        def __init__(self, value=None, left=None, right=None):\n",
+    "            self.left = left\n",
+    "            self.right = right\n",
+    "            self.value = value\n",
+    "    \n",
+    "        def set_val(self, val):\n",
+    "            self.value = val\n",
+    "    \n",
+    "        def set_left(self, val_l):\n",
+    "            self.left = val_l\n",
+    "            \n",
+    "        def set_right(self, val_r):\n",
+    "            self.right = val_r\n",
+    "            \n",
+    "        def get_left(self):\n",
+    "            return self.left\n",
+    "    \n",
+    "        def get_right(self):\n",
+    "            return self.right\n",
+    "        \n",
+    "        def has_left(self):\n",
+    "            return self.left != None\n",
+    "        \n",
+    "        def has_right(self):\n",
+    "            return self.right != None\n",
     "    \n",
     "    def __init__(self, max_depth=np.inf, min_samples_split=2, \n",
-    "                 criterion='gini', debug=False):\n",
-    "        pass\n",
+    "                 criterion='variance', debug=False):\n",
+    "        self.criterias = { \n",
+    "                    'variance':variance,\n",
+    "                    'mad_median':mad_median\n",
+    "                }\n",
+    "        self.min_samples_split = min_samples_split\n",
+    "        self.crit_ = self.criterias[criterion]\n",
+    "        self.root_node = DecisionTree.Node()\n",
+    "    \n",
+    "    \n",
+    "    def find_better_split(self, X, y):\n",
+    "        if len(X) == 0:\n",
+    "            return 0, 0, 0\n",
+    "        l = X.shape[0]\n",
+    "        max_crit= -np.inf\n",
+    "        t = X[0]\n",
+    "        position = 0\n",
+    "        for i in range(0,l):\n",
+    "            Q = self.criterion_(X,y,X[i])\n",
+    "            #print(Q)\n",
+    "            if Q >= max_crit:\n",
+    "                max_crit = Q\n",
+    "                t = X[i]\n",
+    "                position = i\n",
+    "        return max_crit, t, position\n",
+    "    \n",
+    "    def split(self, X, y, position, rootNode):\n",
+    "        if len(X) < self.min_samples_split:\n",
+    "            return\n",
+    "        root_X = X[position]\n",
+    "        #set vale\n",
+    "        rootNode.set_val(root_X)\n",
+    "        print('ROOT_X:', root_X)\n",
+    "        X_l = X[:position-1]\n",
+    "        y_l = y[:position-1]\n",
+    "        \n",
+    "        X_r = X[position+1:]\n",
+    "        y_r = y[position+1:]\n",
+    "        \n",
+    "        #go left\n",
+    "        Q_l, t_l, position_l = self.find_better_split(X_l, y_l)\n",
+    "        left_node = DecisionTree.Node()\n",
+    "        rootNode.set_left(left_node)\n",
+    "        print('LEFT')\n",
+    "        self.split(X_l, y_l, position_l, left_node)\n",
+    "        print('LEFT_END')\n",
+    "        \n",
+    "        #go right\n",
+    "        Q_r, t_r, position_r = self.find_better_split(X_r, y_r)\n",
+    "        right_node = DecisionTree.Node()\n",
+    "        rootNode.set_right(right_node)\n",
+    "        print('RIGHT')\n",
+    "        self.split(X_r, y_r, position_r, right_node)\n",
+    "        print('RIGHT_END')    \n",
+    "\n",
     "    \n",
     "    def fit(self, X, y):\n",
-    "        pass\n",
+    "        #Initial split\n",
+    "        Q, t, position = self.find_better_split(X, y)\n",
+    "        \n",
+    "        self.split(X, y, position, self.root_node)\n",
+    "        \n",
+    "        print(self.root_node)\n",
+    "        \n",
     "        \n",
     "    def predict(self, X):\n",
+    "        \n",
     "        pass\n",
     "        \n",
     "    def predict_proba(self, X):\n",
-    "        pass"
+    "        pass\n",
+    "    \n",
+    "    def criterion_(self, X, y, t):\n",
+    "        FX = self.crit_\n",
+    "        y_l = y[X<t]\n",
+    "        y_r = y[~(X<t)]\n",
+    "        capacity_X = X.shape[0]\n",
+    "        capacity_y_l = y_l.shape[0]\n",
+    "        capacity_y_r = y_r.shape[0]\n",
+    "        return FX(y) - (capacity_y_l/capacity_X)*FX(y_l) - (capacity_y_r/capacity_X)*FX(y_r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FULL [-2.         -1.91836735 -1.83673469 -1.75510204 -1.67346939 -1.59183673\n",
+      " -1.51020408 -1.42857143 -1.34693878 -1.26530612 -1.18367347 -1.10204082\n",
+      " -1.02040816 -0.93877551 -0.85714286 -0.7755102  -0.69387755 -0.6122449\n",
+      " -0.53061224 -0.44897959 -0.36734694 -0.28571429 -0.20408163 -0.12244898\n",
+      " -0.04081633  0.04081633  0.12244898  0.20408163  0.28571429  0.36734694\n",
+      "  0.44897959  0.53061224  0.6122449   0.69387755  0.7755102   0.85714286\n",
+      "  0.93877551  1.02040816  1.10204082  1.18367347  1.26530612  1.34693878\n",
+      "  1.42857143  1.51020408  1.59183673  1.67346939  1.75510204  1.83673469\n",
+      "  1.91836735  2.        ]\n",
+      "ROOT_X: 1.1836734693877546\n",
+      "LEFT\n",
+      "ROOT_X: -1.3469387755102042\n",
+      "LEFT\n",
+      "ROOT_X: -1.7551020408163265\n",
+      "LEFT\n",
+      "ROOT_X: -1.9183673469387754\n",
+      "LEFT\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "RIGHT_END\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "ROOT_X: -1.5918367346938775\n",
+      "LEFT\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "RIGHT_END\n",
+      "RIGHT_END\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "ROOT_X: -0.7755102040816328\n",
+      "LEFT\n",
+      "ROOT_X: -1.1020408163265307\n",
+      "LEFT\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "ROOT_X: -0.9387755102040818\n",
+      "LEFT\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "RIGHT_END\n",
+      "RIGHT_END\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "ROOT_X: 0.7755102040816326\n",
+      "LEFT\n",
+      "ROOT_X: -0.44897959183673475\n",
+      "LEFT\n",
+      "ROOT_X: -0.6122448979591837\n",
+      "LEFT\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "RIGHT_END\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "ROOT_X: 0.4489795918367343\n",
+      "LEFT\n",
+      "ROOT_X: -0.20408163265306145\n",
+      "LEFT\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "ROOT_X: 0.2857142857142856\n",
+      "LEFT\n",
+      "ROOT_X: -0.04081632653061229\n",
+      "LEFT\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "ROOT_X: 0.12244897959183643\n",
+      "LEFT\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "RIGHT_END\n",
+      "RIGHT_END\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "RIGHT_END\n",
+      "RIGHT_END\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "ROOT_X: 0.6122448979591835\n",
+      "LEFT\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "RIGHT_END\n",
+      "RIGHT_END\n",
+      "RIGHT_END\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "ROOT_X: 1.020408163265306\n",
+      "LEFT\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "RIGHT_END\n",
+      "RIGHT_END\n",
+      "RIGHT_END\n",
+      "RIGHT_END\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "ROOT_X: 1.7551020408163263\n",
+      "LEFT\n",
+      "ROOT_X: 1.510204081632653\n",
+      "LEFT\n",
+      "ROOT_X: 1.3469387755102038\n",
+      "LEFT\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "RIGHT_END\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "RIGHT_END\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "ROOT_X: 2.0\n",
+      "LEFT\n",
+      "LEFT_END\n",
+      "RIGHT\n",
+      "RIGHT_END\n",
+      "RIGHT_END\n",
+      "RIGHT_END\n",
+      "<__main__.DecisionTree.Node object at 0x7f58c372ff60>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('FULL',X)\n",
+    "tree = DecisionTree(criterion='variance')\n",
+    "tree.fit(X, y)"
    ]
   },
   {
@@ -355,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   },
   "name": "lesson4_part2_Decision_trees.ipynb"
  },
