--- a/jupyter_russian/topic04_linear_models/lesson4_practice_alice_benchmarks-Copy2.ipynb
+++ b/jupyter_russian/topic04_linear_models/lesson4_practice_alice_benchmarks-Copy2.ipynb
@@ -23,10 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 59,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -52,24 +50,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -293,7 +291,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -350,17 +348,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -372,39 +370,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>25075</th>\n",
-       "      <td>www.abmecatronique.com</td>\n",
+       "      <th>40893</th>\n",
+       "      <td>i.alipayobjects.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13997</th>\n",
-       "      <td>groups.live.com</td>\n",
+       "      <th>45254</th>\n",
+       "      <td>www.finisher.fr</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>42436</th>\n",
-       "      <td>majeureliguefootball.wordpress.com</td>\n",
+       "      <th>18289</th>\n",
+       "      <td>s34.alrenren.happyfishgame.com.cn</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30911</th>\n",
-       "      <td>cdt46.media.tourinsoft.eu</td>\n",
+       "      <th>44682</th>\n",
+       "      <td>track.reference.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8104</th>\n",
-       "      <td>www.hdwallpapers.eu</td>\n",
+       "      <th>43969</th>\n",
+       "      <td>i1-js-14-3-01-10077-547001285-i.init.cedexis-r...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                     site\n",
-       "25075              www.abmecatronique.com\n",
-       "13997                     groups.live.com\n",
-       "42436  majeureliguefootball.wordpress.com\n",
-       "30911           cdt46.media.tourinsoft.eu\n",
-       "8104                  www.hdwallpapers.eu"
+       "                                                    site\n",
+       "40893                                i.alipayobjects.com\n",
+       "45254                                    www.finisher.fr\n",
+       "18289                  s34.alrenren.happyfishgame.com.cn\n",
+       "44682                                track.reference.com\n",
+       "43969  i1-js-14-3-01-10077-547001285-i.init.cedexis-r..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,10 +434,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 62,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# наша целевая переменная\n",
@@ -447,6 +443,27 @@
     "\n",
     "# объединенная таблица исходных данных\n",
     "full_df = pd.concat([train_df.drop('target', axis=1), test_df])\n",
+    "\n",
+    "\n",
+    "new_features = ['12_13', \n",
+    "                'is_sunday',\n",
+    "                '16_18',\n",
+    "              'is_monday',\n",
+    "               'is_tuesday','yyyymm']\n",
+    "\n",
+    "full_df[\"12_13\"] = ((full_df['time1'].dt.hour >= 12) & (full_df['time1'].dt.hour <= 13)).astype(int)\n",
+    "full_df[\"16_18\"] = ((full_df['time1'].dt.hour >= 16) & (full_df['time1'].dt.hour <= 18)).astype(int)\n",
+    "full_df['yyyymm'] = full_df['time1'].dt.strftime('%Y%m').astype(int)\n",
+    "\n",
+    "full_df[\"is_monday\"] = full_df['time1'].dt.weekday.isin([0])*1 #индикатор выходных\n",
+    "full_df[\"is_tuesday\"] = full_df['time1'].dt.weekday.isin([1])*1 #индикатор выходных\n",
+    "full_df[\"is_wednesday\"] = full_df['time1'].dt.weekday.isin([2])*1 #индикатор выходных\n",
+    "full_df[\"is_thursday\"] = full_df['time1'].dt.weekday.isin([3])*1 #индикатор выходных\n",
+    "full_df[\"is_friday\"] = full_df['time1'].dt.weekday.isin([4])*1 #индикатор выходных\n",
+    "\n",
+    "full_df[\"is_saturday\"] = full_df['time1'].dt.weekday.isin([5])*1 #индикатор выходных\n",
+    "full_df[\"is_sunday\"] = full_df['time1'].dt.weekday.isin([6])*1 #индикатор выходных\n",
+    "    \n",
     "\n",
     "# индекс, по которому будем отделять обучающую выборку от тестовой\n",
     "idx_split = train_df.shape[0]"
@@ -463,24 +480,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -600,7 +617,7 @@
        "146670         947  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,10 +637,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 64,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.sparse import csr_matrix"
@@ -631,30 +646,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 65,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "csr_matrix?"
+    "#csr_matrix?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3363580,)\n"
+     ]
+    }
+   ],
    "source": [
     "# последовательность с индексами\n",
     "sites_flatten = full_sites.values.flatten()\n",
     "\n",
+    "\n",
+    "\n",
+    "print(sites_flatten.shape)\n",
+    "\n",
     "# искомая матрица\n",
     "full_sites_sparse = csr_matrix(([1] * sites_flatten.shape[0],\n",
     "                                sites_flatten,\n",
-    "                                range(0, sites_flatten.shape[0] + 10, 10)))[:, 1:]"
+    "                                range(0, sites_flatten.shape[0] + 10, 10)))[:, 1:]\n",
+    "\n",
+    "\n",
+    "additional_df = full_df[new_features]\n",
+    "scaler = StandardScaler()\n",
+    "additional_df = scaler.fit_transform(additional_df)\n",
+    "\n",
+    "full_sites_sparse = hstack((csr_matrix(additional_df), full_sites_sparse), format='csr')\n",
+    "\n"
    ]
   },
   {
@@ -672,10 +703,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 67,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_auc_lr_valid(X, y, C=1.0, ratio = 0.9, seed=17):\n",
@@ -685,8 +714,16 @@
     "    C, seed – коэф-т регуляризации и random_state \n",
     "              логистической регрессии\n",
     "    '''\n",
+    "    # Split the data into the training and validation sets\n",
+    "    idx = int(round(X.shape[0] * ratio))\n",
+    "    # Classifier training\n",
+    "    lr = LogisticRegression(C=C, random_state=seed, n_jobs=-1).fit(X[:idx, :], y[:idx])\n",
+    "    # Prediction for validation set\n",
+    "    y_pred = lr.predict_proba(X[idx:, :])[:, 1]\n",
+    "    # Calculate the quality\n",
+    "    score = roc_auc_score(y[idx:], y_pred)\n",
     "    \n",
-    "    # Ваш код здесь"
+    "    return score\n"
    ]
   },
   {
@@ -698,13 +735,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/sklearn/linear_model/logistic.py:1228: UserWarning: 'n_jobs' > 1 does not have any effect when 'solver' is set to 'liblinear'. Got 'n_jobs' = -1.\n",
+      "  \" = {}.\".format(self.n_jobs))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.982935071663551\n",
+      "CPU times: user 3.94 s, sys: 0 ns, total: 3.94 s\n",
+      "Wall time: 3.93 s\n"
+     ]
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "%%time\n",
+    "# Select the training set from the united dataframe (where we have the answers)\n",
+    "X_train = full_sites_sparse[:idx_split, :]\n",
+    "\n",
+    "# Calculate metric on the validation set\n",
+    "print(get_auc_lr_valid(X_train, y_train))"
    ]
   },
   {
@@ -716,10 +774,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 69,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# функция для записи прогнозов в файл\n",
@@ -740,13 +796,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 70,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Ваш код здесь"
+    "# Ваш код здесь\n",
+    "# Train the model on the whole training data set\n",
+    "# Use random_state=17 for repeatability\n",
+    "# Parameter C=1 by default, but here we set it explicitly\n",
+    "lr = LogisticRegression(C=1.0, random_state=17).fit(X_train, y_train)\n",
+    "\n",
+    "# Make a prediction for test data set\n",
+    "X_test = full_sites_sparse[idx_split:,:]\n",
+    "y_test = lr.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "# Write it to the file which could be submitted\n",
+    "write_to_submission_file(y_test, 'baseline_new.csv')"
    ]
   },
   {
@@ -767,13 +832,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'LogisticRegressionCV' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-52-2d05a3b1e887>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Ваш код здесь\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m searchCV = LogisticRegressionCV(\n\u001b[0m\u001b[1;32m      4\u001b[0m                 \u001b[0mCs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                 \u001b[0;34m,\u001b[0m\u001b[0mscoring\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'roc_auc'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'LogisticRegressionCV' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "# Ваш код здесь\n",
+    "\n",
+    "searchCV = LogisticRegressionCV(\n",
+    "                Cs=cs\n",
+    "                ,scoring='roc_auc'\n",
+    "                ,cv=tscv\n",
+    "                ,random_state=17)\n",
+    "searchCV.fit(X_train, y_train)\n",
+    "max_auc = searchCV.scores_[1].max()\n",
+    "print ('Max auc_roc:', max_auc)\n",
+    "logging.info('Max auc_roc:'+str(max_auc))\n",
+    "X_test = X_full[idx_split:,:]\n",
+    "y_test = searchCV.predict_proba(X_test)[:, 1]\n",
+    "            \n",
+    "# Write it to the file which could be submitted\n",
+    "write_to_submission_file(y_test, 'baseline_'+str('file_num')+'.csv')#<-------file_num-----------------------\n",
+    "       "
    ]
   },
   {
