--- a/jupyter_russian/homeworks/hw8_session3_vw_stackoverflow_tags_10mln.ipynb
+++ b/jupyter_russian/homeworks/hw8_session3_vw_stackoverflow_tags_10mln.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,9 @@
     }
    ],
    "source": [
-    "!head -1 stackoverflow.10kk.tsv"
+    "#sed -i 1,7d stackoverflow.10kk.tsv\n",
+    "\n",
+    "!head -1 ../../data/stackoverflow.10kk.tsv"
    ]
   },
   {
@@ -94,22 +96,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000000 stackoverflow.10kk.tsv\n",
-      "CPU times: user 1.08 s, sys: 280 ms, total: 1.36 s\n",
-      "Wall time: 34.8 s\n"
+      "10000000 ../../data/stackoverflow.10kk.tsv\n",
+      "CPU times: user 540 ms, sys: 76 ms, total: 616 ms\n",
+      "Wall time: 28.8 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "!wc -l stackoverflow.10kk.tsv"
+    "!wc -l ../../data/stackoverflow.10kk.tsv"
    ]
   },
   {
@@ -146,7 +148,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting preprocess.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile preprocess.py\n",
+    "import os\n",
+    "from tqdm import tqdm\n",
+    "import sys\n",
+    "\n",
+    "TOTAL_LINES=10000000\n",
+    "TAGS_LIST={'javascript', 'java', 'python', 'ruby', 'php', 'c++', 'c#', 'go', 'scala', 'swift'}\n",
+    "\n",
+    "if len(sys.argv) != 3:\n",
+    "    print ('Invalid command line arguments.')\n",
+    "    sys.exit()\n",
+    "\n",
+    "in_filename = sys.argv[1]\n",
+    "out_filename = sys.argv[2]\n",
+    "\n",
+    "with open(in_filename, 'r') as infile,open(out_filename, 'a') as outfile:\n",
+    "    for line in tqdm(infile, total=TOTAL_LINES, mininterval=10):\n",
+    "        pair = line.strip().split('\\t')\n",
+    "        if len(pair) != 2:\n",
+    "            continue\n",
+    "        question, tags = pair\n",
+    "        line_tags = set(tags.split(' '))\n",
+    "        itsct=TAGS_LIST.intersection(line_tags)\n",
+    "        if len(itsct)==1:\n",
+    "            outfile.write(str(list(TAGS_LIST).index(''.join(itsct))+1)+' | '+question.replace(\":\", \"\").replace(\"|\", \" \")+'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,25 +211,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000000it [02:19, 71802.03it/s]\n",
-      "4389054 lines selected, 15 lines corrupted.\n"
+      "100%|############################| 10000000/10000000 [01:45<00:00, 95020.99it/s]\n"
      ]
     }
    ],
    "source": [
-    "!python3.5 preprocess.py stackoverflow.10kk.tsv stackoverflow.vw"
+    "#!python3.5 preprocess.py ../../data/stackoverflow.10kk.tsv stackoverflow.vw"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -194,8 +236,8 @@
      "output_type": "stream",
      "text": [
       "4389054 stackoverflow.vw\n",
-      "CPU times: user 550 ms, sys: 170 ms, total: 720 ms\n",
-      "Wall time: 18.2 s\n"
+      "CPU times: user 172 ms, sys: 56 ms, total: 228 ms\n",
+      "Wall time: 11.8 s\n"
      ]
     }
    ],
@@ -206,11 +248,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\r\n"
+     ]
+    }
+   ],
    "source": [
-    "!gzip stackoverflow.10kk.tsv"
+    "#!gzip ../../data/stackoverflow.10kk.tsv"
    ]
   },
   {
@@ -232,7 +282,32 @@
    },
    "outputs": [],
    "source": [
-    "''' ВАШ КОД ЗДЕСЬ '''"
+    "''' ВАШ КОД ЗДЕСЬ '''\n",
+    "# # первые 1463018 строк должны пойти в обучающую часть stackoverflow_train.vw\n",
+    "# !head -1463018 stackoverflow.vw  > stackoverflow_train.vw\n",
+    "# # последние 1463018 – в тестовую stackoverflow_test.vw\n",
+    "# !tail -1463018 stackoverflow.vw  > stackoverflow_test.vw\n",
+    "# # оставшиеся – в проверочную stackoverflow_valid.vw\n",
+    "# !head -2926036 stackoverflow.vw | tail -1463018 > stackoverflow_valid.vw\n",
+    "\n",
+    "\n",
+    "# #  сохраните векторы ответов для проверочной выборки в  файл stackoverflow_valid_labels.txt \n",
+    "# !head -2926036 stackoverflow.vw | tail -1463018 | cut -d '|' -f-1  > stackoverflow_valid_labels.txt\n",
+    "# #  сохраните векторы ответов для тестовой выборки в  файл  stackoverflow_test_labels.txt\n",
+    "# !tail -1463018 stackoverflow.vw | cut -d '|' -f-1  > stackoverflow_test_labels.txt\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#!head -1463018 hw8_data/stackoverflow.vw > hw8_data/stackoverflow_train.vw\n",
+    "#!tail -1463018 hw8_data/stackoverflow.vw > hw8_data/stackoverflow_test.vw\n",
+    "#!tail -n+1463018 hw8_data/stackoverflow.vw | head -n+1463018 > hw8_data/stackoverflow_valid.vw\n",
+    "#!split -l 1463018 hw8_data/stackoverflow.vw hw8_data/stack\n",
+    "!mv hw8_data/stackaa hw8_data/stack_train.vw \n",
+    "!mv hw8_data/stackab hw8_data/stack_valid.vw \n",
+    "!mv hw8_data/stackac hw8_data/stack_test.vw \n",
+    "!cut -d '|' -f 1 hw8_data/stack_valid.vw > hw8_data/stack_valid_labels.txt\n",
+    "!cut -d '|' -f 1 hw8_data/stack_test.vw > hw8_data/stack_test_labels.txt"
    ]
   },
   {
@@ -260,7 +335,74 @@
    },
    "outputs": [],
    "source": [
-    "''' ВАШ КОД ЗДЕСЬ '''"
+    "''' ВАШ КОД ЗДЕСЬ '''\n",
+    "\n",
+    "%%time\n",
+    "for p in [1,3,5]:\n",
+    "    for n in [1,2,3]:\n",
+    "        !vw --oaa 10 \\\n",
+    "            -d hw8_data/stack_train.vw \\\n",
+    "            --loss_function squared \\\n",
+    "            --passes {p} \\\n",
+    "            --ngram {n} \\\n",
+    "            -f hw8_data/stack_model_{p}_{n}.vw \\\n",
+    "            --bit_precision 28 \\\n",
+    "            --random_seed 17 \\\n",
+    "            --quiet \\\n",
+    "            --c\n",
+    "        print ('stack_model_{}_{}.vw is ready'.format(p,n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "for p in [1,3,5]:\n",
+    "    for n in [1,2,3]:  \n",
+    "        !vw -i hw8_data/stack_model_{p}_{n}.vw \\\n",
+    "            -t -d hw8_data/stack_valid.vw \\\n",
+    "            -p hw8_data/stack_valid_pred_{p}_{n}.txt \\\n",
+    "            --quiet\n",
+    "        print ('stack_valid_pred_{}_{}.txt is ready'.format(p,n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "with open('hw8_data/stack_valid_labels.txt') as valid_labels_file :\n",
+    "    valid_labels = [float(label) for label in valid_labels_file.readlines()]\n",
+    "\n",
+    "scores=[]    \n",
+    "best_valid_score=0\n",
+    "\n",
+    "for p in [1,3,5]:\n",
+    "    for n in [1,2,3]:\n",
+    "        with open('hw8_data/stack_valid_pred_'+str(p)+'_'+str(n)+'.txt') as pred_file:\n",
+    "            valid_pred = [float(label) for label in pred_file.readlines()]\n",
+    "            #if (n,p) in [(2,3),(3,5),(2,1),(1,1)]:\n",
+    "            acc_score=accuracy_score(valid_labels, valid_pred)\n",
+    "            scores.append(((n,p),acc_score))\n",
+    "            if acc_score>best_valid_score:\n",
+    "                best_valid_score=acc_score\n",
+    "            print(n,p,round(acc_score,4))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores.sort(key=lambda tup: tup[1],reverse=True)\n",
+    "print(scores)\n",
+    "best_valid_scoret_valid_score\n"
    ]
   },
   {
@@ -270,7 +412,7 @@
     "<font color='red'> Вопрос 1.</font> Какое сочетание параметров дает наибольшую долю правильных ответов на проверочной выборке `stackoverflow_valid.vw`?\n",
     "- Биграммы и 3 прохода по выборке\n",
     "- Триграммы и 5 проходов по выборке\n",
-    "- Биграммы и 1 проход по выборке\n",
+    "- Биграммы и 1 проход по выборке <--\n",
     "- Униграммы и 1 проход по выборке"
    ]
   },
@@ -289,7 +431,37 @@
    },
    "outputs": [],
    "source": [
-    "''' ВАШ КОД ЗДЕСЬ '''"
+    "''' ВАШ КОД ЗДЕСЬ '''\n",
+    "\n",
+    "!vw -i hw8_data/stack_model_1_2.vw \\\n",
+    "    -t -d hw8_data/stack_test.vw \\\n",
+    "    -p hw8_data/stack_test_pred_1_2.txt \\\n",
+    "    --quiet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "with open('hw8_data/stack_test_labels.txt') as test_labels_file :\n",
+    "    test_labels = [float(label) for label in test_labels_file.readlines()]\n",
+    "\n",
+    "with open('hw8_data/stack_test_pred_1_2.txt') as pred_file:\n",
+    "    test_pred = [float(label) for label in pred_file.readlines()]\n",
+    "    test_acc_score=accuracy_score(test_labels, test_pred)\n",
+    "    print(round(test_acc_score,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "100*round(test_acc_score,4)-100*round(best_valid_score,4)\n"
    ]
   },
   {
@@ -299,7 +471,7 @@
     "<font color='red'> Вопрос 2.</font> Как соотносятся доли правильных ответов лучшей (по доле правильных ответов на валидации) модели на проверочной и на тестовой выборках? (здесь % – это процентный пункт, т.е., скажем, снижение с 50% до 40% – это на 10%, а не 20%).\n",
     "- На тестовой ниже примерно на 2%\n",
     "- На тестовой ниже примерно на 3%\n",
-    "- Результаты почти одинаковы – отличаются меньше чем на 0.5%"
+    "- Результаты почти одинаковы – отличаются меньше чем на 0.5% <---"
    ]
   },
   {
@@ -317,7 +489,65 @@
    },
    "outputs": [],
    "source": [
-    "''' ВАШ КОД ЗДЕСЬ '''"
+    "''' ВАШ КОД ЗДЕСЬ '''\n",
+    "!cat hw8_data/stack_train.vw hw8_data/stack_valid.vw > hw8_data/stack_merged.vw\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "!vw --oaa 10 \\\n",
+    "    -d hw8_data/stack_merged.vw \\\n",
+    "    --loss_function squared \\\n",
+    "    --passes 1 \\\n",
+    "    --ngram 2 \\\n",
+    "    -f hw8_data/stack_model_merged.vw \\\n",
+    "    --bit_precision 28 \\\n",
+    "    --random_seed 17 \\\n",
+    "    --quiet \\\n",
+    "    -c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "!vw -i hw8_data/stack_model_merged.vw \\\n",
+    "    -t -d hw8_data/stack_test.vw \\\n",
+    "    -p hw8_data/stack_test_pred_merged.txt \\\n",
+    "    --quiet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "with open('hw8_data/stack_test_labels.txt') as test_labels_file :\n",
+    "    test_labels = [float(label) for label in test_labels_file.readlines()]\n",
+    "\n",
+    "with open('hw8_data/stack_test_pred_merged.txt') as pred_file:\n",
+    "    test_pred = [float(label) for label in pred_file.readlines()]\n",
+    "    merged_acc_score=accuracy_score(test_labels, test_pred)\n",
+    "    print(round(merged_acc_score,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "100*round(merged_acc_score,4)-100*round(test_acc_score,4)\n"
    ]
   },
   {
@@ -326,7 +556,7 @@
    "source": [
     "<font color='red'> Вопрос 3.</font> На сколько процентных пунктов повысилась доля правильных ответов модели после обучения на вдвое большей выборке (обучающая `stackoverflow_train.vw` + проверочная `stackoverflow_valid.vw`) по сравнению с моделью, обученной только на `stackoverflow_train.vw`?\n",
     " - 0.1%\n",
-    " - 0.4%\n",
+    " - 0.4% <--\n",
     " - 0.8%\n",
     " - 1.2%"
    ]
